--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/section-one.css">
+    <link rel="stylesheet" href="./css/sectione-twoo.css">
+    <link rel="stylesheet" href="./css/section-three.css">
+    <link rel="stylesheet" href="./css/section-four.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/section-one.css">
+    <link rel="stylesheet" href="./css/main-form-div.css">
+    <link rel="stylesheet" href="./css/container.css">
 </head>
 <body>
     <header class="header">
@@ -22,9 +31,52 @@
                 </a>
                 <ul class="nav-ul">
                     <li><a href="./index.html" class="nav-href studio">Studio</a></li>
-                    <li><a href="" class="nav-href portfolio">Portfolio</a></li>
-                    <li><a href="" class="nav-href contacts">Contacts</a></li>
+                    <li><a href="#portfolio" class="nav-href portfolio">Portfolio</a></li>
+                    <li><a href="#contacts" class="nav-href contacts">Contacts</a></li>
                 </ul>
+                <div class="burger-div">
+                    <input type="checkbox" id="burger">
+                    <label for="burger" class="toggle">
+                        <div class="bar bar-top"></div>
+                        <div class="bar bar-middle"></div>
+                        <div class="bar bar-bottom"></div>
+                    </label>
+                </div>
+                <div class="mobile-menu is-open">
+                    <ul class="mobile-menu-nav-ul">
+                        <li><a href="./index.html" class="nav-href studio">Studio</a></li>
+                        <li><a href="#portfolio" class="nav-href portfolio">Portfolio</a></li>
+                        <li><a href="#contacts" class="nav-href contacts">Contacts</a></li>
+                    </ul>
+                    <address class="mobile-menu-address">
+                        <ul class="address-ul">
+                            <li><a href="tel:+110001111111" class="adress-href blue">+11 (000) 111-11-11</a></li>
+                            <li><a href="mailto:info@devstudio.com" class="adress-href">info@devstudio.com</a></li>
+                        </ul>
+                    </address>
+                    <ul class="social-icon">
+                        <li class="social-icon-li"><a class="social-icon-li-a" href="https://www.instagram.com/" target="_blank">
+                            <svg width="24" height="24" class="icon">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a></li>
+                        <li class="social-icon-li"><a class="social-icon-li-a" href="https://twitter.com/" target="_blank">
+                            <svg width="24" height="24" class="icon">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a></li>
+                        <li class="social-icon-li"><a class="social-icon-li-a" href="https://www.facebook.com/" target="_blank">
+                            <svg width="24" height="24" class="icon">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a></li>
+                        <li class="social-icon-li"><a class="social-icon-li-a" href="https://www.linkedin.com/" target="_blank">
+                            <svg width="24" height="24" class="icon">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a></li>
+                    </ul>
+                </div>
             </nav>
             <address class="address">
                 <ul class="address-ul">
@@ -36,7 +88,7 @@
     </header>
     <main class="main">
         <section class="section-one">
-            <div class="section-one-main-div  container">
+            <div class="section-one-main-div container">
                 <h1 class="section-one-main-text">Effective Solutions for Your Business</h1>
                 <button type="button" class="main-button">Order Service</button>
             </div>
@@ -207,7 +259,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section-four">
+        <section class="section-four" id="portfolio">
             <div class="section-three-main-div  container">
                 <h2 class="section-four-main-text">Our Portfolio</h2>
                 <ul class="section-four-ul">
@@ -287,7 +339,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
         <div class="footer-main-div container">
             <div class="href-and-logo_div">
                 <a href="./index.html" class="footer-logo">
@@ -339,7 +391,7 @@
         </div>
     </footer>
 
-    <div class="main-form-div">
+    <div class="main-form-div is-hidden">
         <div class="form-content">
 
             <button class="close-button" type="button">
@@ -355,7 +407,7 @@
                 <div class="label-div">
                     <label class="main-form-label" for="user-name">Name</label> 
                     <div class="div">
-                        <input type="text" name="user-name" id="user-name" autofocus class="input" />
+                        <input type="text" name="user-name" id="user-name" class="input" />
                         <svg width="18" height="24" class="icon">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
