--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="bar bar-bottom"></div>
                     </label>
                 </div>
-                <div class="mobile-menu is-open">
+                <div class="mobile-menu">
                     <ul class="mobile-menu-nav-ul">
                         <li><a href="./index.html" class="nav-href studio">Studio</a></li>
                         <li><a href="#portfolio" class="nav-href portfolio">Portfolio</a></li>
@@ -54,7 +54,7 @@
                             <li><a href="mailto:info@devstudio.com" class="adress-href">info@devstudio.com</a></li>
                         </ul>
                     </address>
-                    <ul class="social-icon">
+                    <ul class="mobile-menu-social-icon">
                         <li class="social-icon-li"><a class="social-icon-li-a" href="https://www.instagram.com/" target="_blank">
                             <svg width="24" height="24" class="icon">
                                 <use href="./images/icons.svg#icon-instagram"></use>
