--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section-four" id="portfolio">
+        <!-- <section class="section-four" id="portfolio">
             <div class="section-three-main-div  container">
                 <h2 class="section-four-main-text">Our Portfolio</h2>
                 <ul class="section-four-ul">
@@ -337,9 +337,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="footer" id="contacts">
+    <!-- <footer class="footer" id="contacts">
         <div class="footer-main-div container">
             <div class="href-and-logo_div">
                 <a href="./index.html" class="footer-logo">
@@ -389,9 +389,9 @@
                 </form>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
-    <div class="main-form-div is-hidden">
+    <!-- <div class="main-form-div is-hidden">
         <div class="form-content">
 
             <button class="close-button" type="button">
@@ -453,6 +453,6 @@
 
             </form>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
