--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         </div>
     </footer>
 
-    <!-- <div class="main-form-div is-hidden">
+    <div class="main-form-div is-hidden">
         <div class="form-content">
 
             <button class="close-button" type="button">
@@ -445,7 +445,7 @@
                                 <use href="./images/icons.svg#icon-checkbox"></use>
                             </svg>
                         </span>
-                        I accept the terms and conditions of the <a class="href" href="">Privacy Policy</a>
+                        <span class="checkbox-span-text">I accept the terms and conditions of the <a class="href" href="">Privacy Policy</a></span>
                     </label>
                 </div>
 
@@ -453,6 +453,6 @@
 
             </form>
         </div>
-    </div> -->
+    </div>
 </body>
 </html>
